--- a/example2.ipynb
+++ b/example2.ipynb
@@ -537,6 +537,13 @@
     "centering = 'min'\n",
     "c = fbm3d_ISM(nx=nx,ny=ny,nz=nz,seed=seed,mach=mach,verbose=True, centering=centering)\n",
     "\n",
+    "# Instead of re-generating the data using the centering option, you can center the data cube at the minimum location as follows:\n",
+    "#\n",
+    "# c = a.copy()\n",
+    "# c.centering('min')\n",
+    "#\n",
+    "# In the above, copy() performs a deep-copy. It is important to note that without a deep copy, the original data would be modified.\n",
+    "\n",
     "fig, ax = plt.subplots(1,4, figsize=(24,4))\n",
     "ln_data = np.log(c.data)\n",
     "im0 = ax[0].imshow(ln_data[:,:,nz//2])\n",
@@ -603,6 +610,13 @@
    "source": [
     "centering = 'max'\n",
     "c = fbm3d_ISM(nx=nx,ny=ny,nz=nz,seed=seed,mach=mach,verbose=True, centering=centering)\n",
+    "\n",
+    "# Instead of re-generating the data using the centering option, you can center the data cube at the minimum location as follows:\n",
+    "#\n",
+    "# c = a.copy()\n",
+    "# c.centering('min')\n",
+    "#\n",
+    "# In the above, copy() performs a deep-copy. It is important to note that without a deep copy, the original data would be modified.\n",
     "\n",
     "fig, ax = plt.subplots(1,4, figsize=(24,4))\n",
     "ln_data = np.log(c.data)\n",
