--- a/example2.ipynb
+++ b/example2.ipynb
@@ -537,8 +537,8 @@
     "centering = 'min'\n",
     "c = fbm3d_ISM(nx=nx,ny=ny,nz=nz,seed=seed,mach=mach,verbose=True, centering=centering)\n",
     "\n",
-    "# Instead of re-generating the data using the centering option,\n",
-    "#      you can center the data cube at the minimum location as follows:\n",
+    "# To avoid re-generating the data using the centering option,\n",
+    "#      you can center the data cube directly at the minimum value location, as shown below:\n",
     "#\n",
     "#c = a.copy()  \n",
     "#c.centering('min')\n",
@@ -613,11 +613,11 @@
     "centering = 'max'\n",
     "c = fbm3d_ISM(nx=nx,ny=ny,nz=nz,seed=seed,mach=mach,verbose=True, centering=centering)\n",
     "\n",
-    "# Instead of re-generating the data using the centering option,\n",
-    "#      you can center the data cube at the minimum location as follows:\n",
+    "# To avoid re-generating the data using the centering option,\n",
+    "#      you can center the data cube directly at the maximum value location, as shown below:\n",
     "#\n",
     "#c = a.copy()  \n",
-    "#c.centering('min')\n",
+    "#c.centering('max')\n",
     "#\n",
     "# In the above, copy() performs a deep-copy.\n",
     "# It is important to note that without a deep copy, the original data would be modified.\n",
